--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name=“description” content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
     <link rel="icon" href="./favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
+      <!-- HTML Meta Tags -->
     <title>Figma Resources, UI Kits & Templates - FigmaFinder</title>
+    <meta name="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Figma Resources, UI Kits & Templates - FigmaFinder">
+    <meta itemprop="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
+    <meta itemprop="image" content="https://i.imgur.com/tUM1X5j.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.figmafinder.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Figma Resources, UI Kits & Templates - FigmaFinder">
+    <meta property="og:description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
+    <meta property="og:image" content="https://i.imgur.com/tUM1X5j.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Figma Resources, UI Kits & Templates - FigmaFinder">
+    <meta name="twitter:description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
+    <meta name="twitter:image" content="https://i.imgur.com/tUM1X5j.png">
   </head>
   <body>
     <noscript>
