removed per-page meta
For some reason, it wasn't showing as pre-rendered So  i removed for the sake of SEO.

Re-instate at a later date.

--- a/public/index.html
+++ b/public/index.html
@@ -19,26 +19,26 @@
       rel="stylesheet">
 
       <!-- HTML Meta Tags -->
-    <!-- <title>Figma Resources, UI Kits & Templates - FigmaFinder</title>
-    <meta name="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!"> -->
+    <title>Figma Resources, UI Kits & Templates - FigmaFinder</title>
+    <meta name="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
 
     <!-- Google / Search Engine Tags -->
-    <!-- <meta itemprop="name" content="Figma Resources, UI Kits & Templates - FigmaFinder">
+    <meta itemprop="name" content="Figma Resources, UI Kits & Templates - FigmaFinder">
     <meta itemprop="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
-    <meta itemprop="image" content="https://i.imgur.com/tUM1X5j.png"> -->
+    <meta itemprop="image" content="https://i.imgur.com/tUM1X5j.png">
 
     <!-- Facebook Meta Tags -->
-    <!-- <meta property="og:url" content="https://www.figmafinder.com">
+    <meta property="og:url" content="https://www.figmafinder.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Figma Resources, UI Kits & Templates - FigmaFinder">
     <meta property="og:description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
-    <meta property="og:image" content="https://i.imgur.com/tUM1X5j.png"> -->
+    <meta property="og:image" content="https://i.imgur.com/tUM1X5j.png">
 
     <!-- Twitter Meta Tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Figma Resources, UI Kits & Templates - FigmaFinder">
     <meta name="twitter:description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
-    <meta name="twitter:image" content="https://i.imgur.com/tUM1X5j.png"> -->
+    <meta name="twitter:image" content="https://i.imgur.com/tUM1X5j.png">
   </head>
   <body>
     <noscript>
