added title updates (Meta info)

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
       rel="stylesheet">
 
       <!-- HTML Meta Tags -->
-    <title>Figma Resources, UI Kits & Templates - FigmaFinder</title>
-    <meta name="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!">
+    <!-- <title>Figma Resources, UI Kits & Templates - FigmaFinder</title>
+    <meta name="description" content="Figma Resources found by Figma Finder. Figma Finder is a collection of all the best Figma Resources found by us and our community. UI Kits, Icons, Mockups, etc. Created by those who love Figma for you!"> -->
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Figma Resources, UI Kits & Templates - FigmaFinder">
